teach/kubernetes/yaml/networkpolicy-lab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networkpolicy-lab
  labels:
    app.kubernetes.io/part-of: networkpolicy-lab
