teach/kubernetes/yaml/networkpolicy-lab/policy-ingress-broken.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-ingress
  namespace: networkpolicy-lab
spec:
  podSelector:
    matchLabels:
      app: backend-typo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
